[package]
name = "risc0-benchmark-lib"
version = "0.18.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.6", default_features = false }
risc0-zkvm = { path = "../../risc0/zkvm", default-features = false }

[features]
cuda = []
metal = []
