[package]
name = "risc0-benchmark-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { path = "../../risc0/zkvm", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.6", default_features = false }

[features]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
