[package]
name = "bonsai-ethereum-relay"
description = "A relayer to integrate Ethereum with Bonsai."
version = "0.2.0"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0"
async-trait = "0.1.58"
axum = { version = "0.6.1", features = ["macros", "headers"] }
bincode = "1.3.3"
bonsai-proxy-contract = { path = "src/proxy-contract" }
bonsai-rest-api-mock = { workspace = true }
bonsai-sdk = { workspace = true, features = ["async"] }
clap = { version = "4.0", features = ["derive", "env"] }
displaydoc = "0.2"
ethers = { version = "=2.0.2", features = ["rustls", "ws"] }
ethers-signers = { version = "=2.0.2", features = ["aws"] }
ethers-solc = { version = "=2.0.8" }
futures = "0.3"
hex = "0.4.3"
hyper = "0.14"
pin-project = "1"
reqwest = { version = "0.11.14", features = ["stream", "json", "gzip"] }
risc0-zkvm = { workspace = true, features = ["binfmt"] }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_kms = { version = "0.48.0", default-features = false }
semver = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
thiserror = "1.0.11"
tokio = { version = "1.19", features = ["full", "sync"] }
tokio-stream = "0.1.12"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
typed-builder = "0.12.0"
utoipa = { version = "3.0.0", features = ["axum_extras", "time", "uuid"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum", "debug-embed"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
bincode = "1"
bytemuck = "1.13"
risc0-zkvm-methods = { path = "../../risc0/zkvm/methods", default-features = false }
time = "0.3.11"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
wiremock = "0.5"
