[package]
name = "bonsai-ethereum-contracts"
description = "Bonsai Ethereum contracts"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.release]
release = false

[build-dependencies]
anyhow = "1.0"

[dependencies]
ethers = { version = "2.0", features = ["rustls", "ws"] }
hex = { version = "0.4", optional = true }
risc0-zkvm = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = []
control-id = ["dep:risc0-zkvm", "dep:hex"]
