[package]
name = "bonsai-rest-api-mock"
description = "An HTTP REST API server to mock the Bonsai-alpha prover interface."
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["macros", "headers"] }
bincode = "1.3"
bonsai-sdk = { workspace = true }
displaydoc = "0.2"
hex = "0.4"
hyper = "0.14"
risc0-zkvm = { workspace = true, features = ["prove"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full", "sync"] }
tokio-stream = "0.1"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }

[dev-dependencies]
bonsai-sdk = { workspace = true, features = ["async"] }
risc0-zkvm-methods = { path = "../../risc0/zkvm/methods", default-features = false }
