[package]
name = "bonsai-sdk"
description = "Bonsai Software Development Kit"
version = "0.5.0"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full", "sync"], optional = true }

[dev-dependencies]
httpmock = "0.6"
serde_json = "1.0"
temp-env = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4"] }

[lib]
# Disables the doctest from the README because it imports external components and make requests
doctest = false

[features]
default = ["std"]
std = []
async = ["dep:tokio"]
