[package]
name = "bonsai-sdk"
description = "Bonsai Software Development Kit"
version = "0.8.0"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
risc0-groth16 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full", "sync"], optional = true }

[dev-dependencies]
anyhow = "1.0"
bincode = "1.3"
bytemuck = "1.14"
hex = "0.4"
httpmock = "0.7"
risc0-zkvm = { path = "../../risc0/zkvm" }
temp-env = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4"] }

[features]
default = ["std"]
std = ["risc0-groth16/std"]
async = ["dep:tokio"]
