[package]
name = "bonsai-sdk"
description = "Bonsai Software Development Kit"
version = "1.4.1-rc.3"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
duplicate = "2.0.0"
maybe-async = "0.2"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["fs"], optional = true }

[dev-dependencies]
anyhow = "1.0"
bincode = "1.3"
bytemuck = "1.14"
hex = "0.4"
httpmock = "0.7"
risc0-zkvm = { path = "../../risc0/zkvm" }
temp-env = "0.3"
tokio = { version = "1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4"] }

[features]
default = []
non_blocking = ["dep:tokio"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
