[package]
name = "risc0-seal-to-json"
description = "RISC Zero seal to json"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
bytemuck = "1.14"
num-bigint = "0.4"
num-traits = "0.2"
risc0-core = { path = "../../risc0/core" }
risc0-zkp = { path = "../../risc0/zkp", features = ["prove"] }

[dev-dependencies]
hex = "0.4"
risc0-zkvm = { path = "../../risc0/zkvm", features = ["prove"] }
risc0-zkvm-methods = { path = "../../risc0/zkvm/methods" }
serde_json = "1.0"
tempfile = "3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing = "0.1"

[features]
cuda = ["risc0-zkvm/cuda", "risc0-zkp/cuda"]
metal = ["risc0-zkvm/metal", "risc0-zkp/metal"]

[package.metadata.release]
release = false
