[package]
name = "bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-core = { path = "core" }
bevy-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]
profiler = ["risc0-zkvm/profiler"]
default = []
