[package]
name = "bls12_381-example"
version = "0.1.0"
edition = { workspace = true }

default-run = "bls12_381-example"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]

[dependencies]
bls12_381-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
