[package]
name = "browser-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.7", default-features = false }
guest = { path = "./guest/" }
risc0-zkvm  = { path = "../../risc0/zkvm", features = ["prove"] }
risc0-build = { path = "../../risc0/build" }
serde = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
