[package]
name = "browser-verify"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
borsh = { version = "1.5.7", default-features = false }
guest = { path = "guest" }
risc0-zkvm  = { path = "../../risc0/zkvm", features = ["prove"] }
serde = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
