[package]
name = "browser-verify"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
risc0-zkvm = { path = "../../risc0/zkvm", default-features = false, features = ["rv32im-m3"] }
risc0-zkvm-receipts = { path = "../../risc0/zkvm/receipts" }

# These crates are used for running unit tests.
[dev-dependencies]
bincode = "1.3"
wasm-bindgen-test = "0.3"
