[package]
name = "cycle-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-methods = { path = "../bevy/methods" }
chess-core = { path = "../chess/core" }
chess-methods = { path = "../chess/methods" }
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
digital-signature-core = { path = "../digital-signature/core" }
digital-signature-methods = { path = "../digital-signature/methods" }
ecdsa-methods = { path = "../ecdsa/methods" }
env_logger = "0.10"
hello-world-methods = { path = "../hello-world/methods" }
image = "0.24"
json-methods = { path = "../json/methods" }
k256 = { version = "0.13", features = ["serde"] }
log = "0.4"
password-checker-core = { path = "../password-checker/core" }
password-checker-methods = { path = "../password-checker/methods" }
prorata-core = { path = "../prorata/core" }
prorata-methods = { path = "../prorata/methods" }
rand = "0.8"
rand_core = "0.6.4"
risc0-zkvm = { path = "../../risc0/zkvm", features = ["prove"] }
rmp-serde = "1.1"
rust_decimal = { version = "1.29", features = ["serde-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-methods = { path = "../sha/methods" }
sha2 = "0.10"
smartcore = { version = "0.3", features = ['serde'] }
smartcore-ml-methods = { path = "../smartcore-ml/methods" }
waldo-core = { path = "../waldo/core" }
waldo-methods = { path = "../waldo/methods" }
wasm-methods = { path = "../wasm/methods" }
wat = "1.0"
wordle-methods = { path = "../wordle/methods" }

[features]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
