[package]
name = "cycle-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-methods = { path = "../bevy/methods" }
chess-core = { path = "../chess/core" }
chess-methods = { path = "../chess/methods" }
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
digital-signature-core = { path = "../digital-signature/core" }
digital-signature-methods = { path = "../digital-signature/methods" }
ecdsa-methods = { path = "../ecdsa/methods" }
hello-world-methods = { path = "../hello-world/methods" }
image = "0.24"
json-methods = { path = "../json/methods" }
k256 = { version = "0.13", features = ["serde"] }
password-checker-core = { path = "../password-checker/core" }
password-checker-methods = { path = "../password-checker/methods" }
prorata-core = { path = "../prorata/core" }
prorata-methods = { path = "../prorata/methods" }
rand = "0.8"
rand_core = "0.6.4"
risc0-zkvm = { path = "../../risc0/zkvm", features = ["prove"] }
rmp-serde = "1.1"
rust_decimal = { version = "1.29", features = ["serde-str"] }
serde = { version = "1.0", features = ["derive"] }
sha-methods = { path = "../sha/methods" }
smartcore = { version = "0.3", features = ['serde'] }
smartcore-ml-methods = { path = "../smartcore-ml/methods" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
waldo-core = { path = "../waldo/core" }
waldo-methods = { path = "../waldo/methods" }
wasm-methods = { path = "../wasm/methods" }
wat = "1.0"
wordle-methods = { path = "../wordle/methods" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
