[package]
name = "digital-signature"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.1"
digital-signature-core = { path = "core" }
digital-signature-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"
sha2 = "0.10"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-log = { version = "0.2", features = ["trace", "log"] }
env_logger = "0.10"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/cuda"]
profiler = ["risc0-zkvm/profiler"]
