[package]
name = "digital-signature"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
clap = { version = "4.4", features = ["derive"] }
digital-signature-core = { path = "core" }
digital-signature-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
sha2 = "0.10"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
