[package]
name = "ecdsa-example"
version = "0.1.0"
edition = "2021"

default-run = "ecdsa-example"

[dependencies]
ecdsa-methods = { path = "methods" }
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
risc0-zkvm = { path = "../../risc0/zkvm" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
